--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
     </li>
 </ul>
     </div>
-
+<div>
+    <h2>Ingredientes</h2>
+    <ul>
+        <li>2-3 ovos grandes</li>
+        <li>Sal, a gosto </li>
+        <li>Pimenta, a gosto </li>
+        <li>1 colher de sopa de manteiga e óleo</li>
+        <li>Recheios opcionais: queijo, legumes picados, carnes cozidas, e ervas.  </li>
+    </ul>
+</div>
     </div>
  </body>
  </html>
